fixed page overflow

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -86,6 +86,7 @@ body {
   color: $primary;
   font-family: "arame";
   font-style: oblique;
+  overflow-x: hidden;
 }
 
 [class*="col"] {
